SC145: Fix typo

--- a/conf/machine/sc145-db150.conf
+++ b/conf/machine/sc145-db150.conf
@@ -8,7 +8,7 @@ include conf/machine/include/sc145.inc
 
 MACHINE_FEATURES += " usbhost usbgadget vfat"
 
-KERNEL_DEVICETREE = "imx6ul-sc145-db150.dts "
+KERNEL_DEVICETREE = "imx6ul-sc145-db150.dtb "
 
 IMAGE_FSTYPES = "ubifs"
 
