--- a/documentation/local.conf.sample
+++ b/documentation/local.conf.sample
@@ -23,8 +23,8 @@
 #DISTRO_FEATURES_BACKFILL_CONSIDERED = "sysvinit"
 #VIRTUAL-RUNTIME_initscripts = ""
 
-#IMAGE_FSTYPES = "ext4"
-
+# IMAGE_FSTYPES_append = " ext4"
+IMAGE_FSTYPES_append = " tar.gz"
 
 MACHINE = "sc145-db150"
 KERNEL_IMAGETYPE = "uImage"
