--- a/conf/machine/sc145-db150.conf
+++ b/conf/machine/sc145-db150.conf
@@ -12,4 +12,7 @@ KERNEL_DEVICETREE = "imx6ul-sc145-db150.dtb "
 
 IMAGE_FSTYPES = "ubifs"
 
+UBOOT_CONFIG ?= "qspi"
+
+# TBD SD-Card ard configuration
 #  sdcard.gz
