SC145: Override i.MX layer defaults

--- a/conf/machine/sc145-db150.conf
+++ b/conf/machine/sc145-db150.conf
@@ -13,6 +13,8 @@ KERNEL_DEVICETREE = "imx6ul-sc145-db150.dtb "
 IMAGE_FSTYPES = "ubifs"
 
 UBOOT_CONFIG ?= "qspi"
+UBOOT_ENTRYPOINT_sc145-db150 = "0x80800000"
+
 
 # TBD SD-Card ard configuration
 #  sdcard.gz
