--- a/conf/machine/sc145-db150.conf
+++ b/conf/machine/sc145-db150.conf
@@ -15,6 +15,7 @@ IMAGE_FSTYPES = "ubifs"
 UBOOT_CONFIG ?= "qspi"
 UBOOT_ENTRYPOINT_sc145-db150 = "0x80800000"
 
+SERIAL_CONSOLE_sc145-db150 = "115200 ttymxc3"
 
 # TBD SD-Card ard configuration
 #  sdcard.gz
