local.conf.sample: remove opengl-feature from distribution Unbreaks Qt SDK. In most cases you might want to drop x11 as well (i.e. to use Qt5 on framebuffer).

--- a/conf/local.conf.sample
+++ b/conf/local.conf.sample
@@ -19,7 +19,7 @@
 #
 
 # No audio codec on base board an no imx audio support in kernel
-DISTRO_FEATURES_remove = "alsa wayland"
+DISTRO_FEATURES_remove = "alsa wayland opengl"
 
 
 #DISTRO_FEATURES_append = " systemd"
