bblayers.conf.sample: use meta-python (required for latest meta-webstuff)

--- a/conf/bblayers.conf.sample
+++ b/conf/bblayers.conf.sample
@@ -10,6 +10,7 @@ BBFILES ?= ""
 BBLAYERS ?= " \
   ${BSPDIR}/meta \
   ${BSPDIR}/meta-openembedded/meta-oe \
+  ${BSPDIR}/meta-openembedded/meta-python \
   ${BSPDIR}/meta-poky \
   ${BSPDIR}/meta-yocto-bsp \
   ${BSPDIR}/meta-qt5 \
