sc165-cti100-mio16-wlan: Build device specific devicetree

--- a/conf/machine/sc165-cti100-mio16-wlan.conf
+++ b/conf/machine/sc165-cti100-mio16-wlan.conf
@@ -8,7 +8,7 @@ include conf/machine/include/sc165.inc
 
 MACHINE_FEATURES += " usbhost vfat wifi mmc"
 
-KERNEL_DEVICETREE = "imx6ul-sc165-db150.dtb "
+KERNEL_DEVICETREE = "imx6ul-sc165-cti100-mio16-wlan.dtb"
 
 IMAGE_FSTYPES = "ubifs"
 
