beck-sc1*5*wlan*.conf: Add kernel modules and Redpine WiFi firmware to images

--- a/conf/machine/sc165-cti100-mio16-wlan.conf
+++ b/conf/machine/sc165-cti100-mio16-wlan.conf
@@ -17,4 +17,4 @@ UBOOT_ENTRYPOINT_sc165-cti100-mio16-wlan = "0x80800000"
 
 SERIAL_CONSOLE_sc165-cti100-mio16-wlan = "115200 ttymxc3"
 
-MACHINE_RRECOMMENDS += "linux-firmware-imx-sdma-imx6q"
+MACHINE_EXTRA_RRECOMMENDS += "redpine-firmware kernel-modules"
